Use Paimon partition formatting for deletes